<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9638E6"
    tools:context=".StartedFragment">


    <Button
        android:id="@+id/btn_smart"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_margin="16dp"
        android:background="@drawable/button_states"
        android:text="@string/SmartAlarmClock"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:fontFamily="@font/montserrat_bold"
        app:iconSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />

    <Button
        android:id="@+id/btn_todo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:background="@drawable/button_states"
        android:text="@string/todo"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <Button
        android:id="@+id/btn_reminder"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:background="@drawable/button_states"
        android:text="@string/Reminder"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="13sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634" />

    <Button
        android:id="@+id/btn_stopwatch"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:background="@drawable/button_states"
        app:icon="@drawable/ic_baseline_stopwatch"
        app:iconSize="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906" />

    <Button

        android:id="@+id/btn_timer"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:background="@drawable/button_states"
        app:icon="@drawable/ic_baseline_timer"
        app:iconSize="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906" />

    <Button
        android:id="@+id/btn_alarm"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:background="@drawable/button_states"
        android:text="@string/AlarmClock"
        android:textSize="13sp"
        app:iconSize="32dp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/wake_up_brah"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="39sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>